@@ -1,3 +1,4 @@
 Daniel Veillard <daniel@veillard.com>
 Bjorn Reese <breese@users.sourceforge.net>
 William Brack <wbrack@mmm.com.hk>
+Igor Zlatkovic <igor@stud.fh-frankfurt.de> for the Windows port
