@@ -30,7 +30,8 @@ This simply mean that I'm on holliday or on the road.
 
 Daniel
 
-P.S.: Bjorn Reese, William Brack and Thomas Broyer get an exception for
-      the send before commit rule as well as John Fleck for the doc maintenance
-      Send them mail if I don't answer to request in a timely fashion
+P.S.: Bjorn Reese, William Brack, Thomas Broyer and Igor Zlatkovic get an
+      exception for the send before commit rule as well as John Fleck
+      for the doc maintenance Send them mail if I don't answer to request
+      in a timely fashion
 
