@@ -7,7 +7,7 @@ INCLUDES = \
 	-I$(PYTHON_INCLUDES) \
 	-I$(top_srcdir)/include
 
-DOCS_DIR = $(prefix)/share/doc/libxml2-python-$(LIBXML_VERSION)
+DOCS_DIR = $(datadir)/doc/libxml2-python-$(LIBXML_VERSION)
 # libxml2class.txt is generated
 DOCS = TODO
 
